// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`base configuration for android 1`] = `
"{
  mode: 'development',
  externals: [
    'package.json',
    '~/package.json',
    function () { /* omitted long function */ }
  ],
  externalsPresets: {
    node: false
  },
  devtool: 'inline-source-map',
  target: 'node',
  watchOptions: {
    ignored: [
      '__jest__/platforms/**',
      '__jest__/custom_app_resources/**'
    ]
  },
  ignoreWarnings: [
    /System.import\\(\\) is deprecated/
  ],
  output: {
    path: '__jest__/platforms/android/app/src/main/assets/app',
    pathinfo: false,
    publicPath: '',
    libraryTarget: 'commonjs',
    globalObject: 'global',
    clean: true
  },
  resolve: {
    fallback: {
      module: '/Users/nstudio/Documents/github/NativeScript/NativeScript/packages/webpack5/src/polyfills/module.ts'
    },
    fullySpecified: false,
    symlinks: true,
    alias: {
      'mdn-data/css/properties.json': '/Users/nstudio/Documents/github/NativeScript/NativeScript/packages/webpack5/src/polyfills/mdn-data-properties.ts',
      'mdn-data/css/syntaxes.json': '/Users/nstudio/Documents/github/NativeScript/NativeScript/packages/webpack5/src/polyfills/mdn-data-syntaxes.ts',
      'mdn-data/css/at-rules.json': '/Users/nstudio/Documents/github/NativeScript/NativeScript/packages/webpack5/src/polyfills/mdn-data-at-rules.ts',
      module: '/Users/nstudio/Documents/github/NativeScript/NativeScript/packages/webpack5/src/polyfills/module.ts',
      '~': '__jest__/src',
      '@': '__jest__/src'
    },
    extensions: [
      '.android.ts',
      '.ts',
      '.android.js',
      '.js',
      '.android.mjs',
      '.mjs',
      '.android.css',
      '.css',
      '.android.scss',
      '.scss',
      '.android.json',
      '.json'
    ],
    modules: [
      '__jest__/node_modules',
      'node_modules'
    ]
  },
  resolveLoader: {
    modules: [
      '__jest__/node_modules/@nativescript/webpack/dist/loaders',
      '__jest__/node_modules',
      'node_modules'
    ]
  },
  module: {
    rules: [
      /* config.module.rule('esm-extensionless') */
      {
        test: /\\.(mjs|js|ts|tsx)$/,
        resolve: {
          fullySpecified: false
        }
      },
      /* config.module.rule('bundle') */
      {
        enforce: 'post',
        test: '__jest__/src/app.js',
        use: [
          /* config.module.rule('bundle').use('app-css-loader') */
          {
            loader: 'app-css-loader',
            options: {
              platform: 'android'
            }
          }
        ]
      },
      /* config.module.rule('workers') */
      {
        test: /\\.(mjs|js|ts)$/,
        use: [
          /* config.module.rule('workers').use('nativescript-worker-loader') */
          {
            loader: 'nativescript-worker-loader'
          }
        ]
      },
      /* config.module.rule('ts') */
      {
        test: [
          /\\.ts$/
        ],
        use: [
          /* config.module.rule('ts').use('ts-loader') */
          {
            loader: 'ts-loader',
            options: {
              transpileOnly: true,
              allowTsInNodeModules: true,
              compilerOptions: {
                sourceMap: true,
                declaration: false
              },
              getCustomTransformers: function () { /* omitted long function */ }
            }
          },
          /* config.module.rule('ts').use('native-class-downlevel-loader') */
          {
            loader: 'native-class-downlevel-loader'
          },
          /* config.module.rule('ts').use('native-class-strip-loader') */
          {
            loader: 'native-class-strip-loader'
          }
        ]
      },
      /* config.module.rule('js') */
      {
        test: /\\.js$/,
        exclude: [
          /node_modules/
        ]
      },
      /* config.module.rule('xml') */
      {
        test: /\\.xml$/,
        use: [
          /* config.module.rule('xml').use('xml-namespace-loader') */
          {
            loader: 'xml-namespace-loader'
          }
        ]
      },
      /* config.module.rule('css') */
      {
        test: /\\.css$/,
        use: [
          /* config.module.rule('css').use('apply-css-loader') */
          {
            loader: 'apply-css-loader'
          },
          /* config.module.rule('css').use('css2json-loader') */
          {
            loader: 'css2json-loader'
          },
          /* config.module.rule('css').use('postcss-loader') */
          {
            loader: 'postcss-loader',
            options: {
              postcssOptions: {
                plugins: [
                  [
                    'postcss-import',
                    {
                      resolve: function () { /* omitted long function */ }
                    }
                  ]
                ]
              }
            }
          }
        ]
      },
      /* config.module.rule('scss') */
      {
        test: /\\.scss$/,
        use: [
          /* config.module.rule('scss').use('apply-css-loader') */
          {
            loader: 'apply-css-loader'
          },
          /* config.module.rule('scss').use('css2json-loader') */
          {
            loader: 'css2json-loader'
          },
          /* config.module.rule('scss').use('postcss-loader') */
          {
            loader: 'postcss-loader',
            options: {
              postcssOptions: {
                plugins: [
                  [
                    'postcss-import',
                    {
                      resolve: function () { /* omitted long function */ }
                    }
                  ]
                ]
              }
            }
          },
          /* config.module.rule('scss').use('sass-loader') */
          {
            loader: 'sass-loader',
            options: {
              implementation: {
                load: function () { /* omitted long function */ },
                compile: function () {
                  return _call(f, Array.prototype.slice.apply(arguments));
                },
                compileString: function () {
                  return _call(f, Array.prototype.slice.apply(arguments));
                },
                compileAsync: function () {
                  return _call(f, Array.prototype.slice.apply(arguments));
                },
                compileStringAsync: function () {
                  return _call(f, Array.prototype.slice.apply(arguments));
                },
                initCompiler: function () {
                  return _call(f, Array.prototype.slice.apply(arguments));
                },
                initAsyncCompiler: function () {
                  return _call(f, Array.prototype.slice.apply(arguments));
                },
                Compiler: function () {
                  return _call(f, this, Array.prototype.slice.apply(arguments));
                },
                AsyncCompiler: function () {
                  return _call(f, this, Array.prototype.slice.apply(arguments));
                },
                Value: function Value0() {
                },
                SassBoolean: function () {
                  return _call(f, this, Array.prototype.slice.apply(arguments));
                },
                SassArgumentList: function () {
                  return _call(f, this, Array.prototype.slice.apply(arguments));
                },
                SassCalculation: function () {
                  return _call(f, this, Array.prototype.slice.apply(arguments));
                },
                CalculationOperation: function () {
                  return _call(f, this, Array.prototype.slice.apply(arguments));
                },
                CalculationInterpolation: function () {
                  return _call(f, this, Array.prototype.slice.apply(arguments));
                },
                SassColor: function () {
                  return _call(f, this, Array.prototype.slice.apply(arguments));
                },
                SassFunction: function () {
                  return _call(f, this, Array.prototype.slice.apply(arguments));
                },
                SassMixin: function () {
                  return _call(f, this, Array.prototype.slice.apply(arguments));
                },
                SassList: function () {
                  return _call(f, this, Array.prototype.slice.apply(arguments));
                },
                SassMap: function () {
                  return _call(f, this, Array.prototype.slice.apply(arguments));
                },
                SassNumber: function () {
                  return _call(f, this, Array.prototype.slice.apply(arguments));
                },
                SassString: function () {
                  return _call(f, this, Array.prototype.slice.apply(arguments));
                },
                sassNull: {},
                sassTrue: {
                  value: true
                },
                sassFalse: {
                  value: false
                },
                Exception: function () { /* omitted long function */ },
                Logger: {
                  silent: {
                    warn: function () {
                      return _call(f, Array.prototype.slice.apply(arguments));
                    },
                    debug: function () {
                      return _call(f, Array.prototype.slice.apply(arguments));
                    }
                  }
                },
                NodePackageImporter: function () {
                  return _call(f, this, Array.prototype.slice.apply(arguments));
                },
                deprecations: {
                  'call-string': {
                    id: 'call-string',
                    status: 'active',
                    description: 'Passing a string directly to meta.call().',
                    deprecatedIn: {
                      major: 0,
                      minor: 0,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '0.0.0'
                    },
                    obsoleteIn: {
                      major: 0,
                      minor: 0,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '0.0.0'
                    }
                  },
                  elseif: {
                    id: 'elseif',
                    status: 'active',
                    description: '@elseif.',
                    deprecatedIn: {
                      major: 1,
                      minor: 3,
                      patch: 2,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.3.2'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 3,
                      patch: 2,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.3.2'
                    }
                  },
                  'moz-document': {
                    id: 'moz-document',
                    status: 'active',
                    description: '@-moz-document.',
                    deprecatedIn: {
                      major: 1,
                      minor: 7,
                      patch: 2,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.7.2'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 7,
                      patch: 2,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.7.2'
                    }
                  },
                  'relative-canonical': {
                    id: 'relative-canonical',
                    status: 'active',
                    description: 'Imports using relative canonical URLs.',
                    deprecatedIn: {
                      major: 1,
                      minor: 14,
                      patch: 2,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.14.2'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 14,
                      patch: 2,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.14.2'
                    }
                  },
                  'new-global': {
                    id: 'new-global',
                    status: 'active',
                    description: 'Declaring new variables with !global.',
                    deprecatedIn: {
                      major: 1,
                      minor: 17,
                      patch: 2,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.17.2'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 17,
                      patch: 2,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.17.2'
                    }
                  },
                  'color-module-compat': {
                    id: 'color-module-compat',
                    status: 'active',
                    description: 'Using color module functions in place of plain CSS functions.',
                    deprecatedIn: {
                      major: 1,
                      minor: 23,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.23.0'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 23,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.23.0'
                    }
                  },
                  'slash-div': {
                    id: 'slash-div',
                    status: 'active',
                    description: '/ operator for division.',
                    deprecatedIn: {
                      major: 1,
                      minor: 33,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.33.0'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 33,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.33.0'
                    }
                  },
                  'bogus-combinators': {
                    id: 'bogus-combinators',
                    status: 'active',
                    description: 'Leading, trailing, and repeated combinators.',
                    deprecatedIn: {
                      major: 1,
                      minor: 54,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.54.0'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 54,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.54.0'
                    }
                  },
                  'strict-unary': {
                    id: 'strict-unary',
                    status: 'active',
                    description: 'Ambiguous + and - operators.',
                    deprecatedIn: {
                      major: 1,
                      minor: 55,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.55.0'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 55,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.55.0'
                    }
                  },
                  'function-units': {
                    id: 'function-units',
                    status: 'active',
                    description: 'Passing invalid units to built-in functions.',
                    deprecatedIn: {
                      major: 1,
                      minor: 56,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.56.0'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 56,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.56.0'
                    }
                  },
                  'duplicate-var-flags': {
                    id: 'duplicate-var-flags',
                    status: 'active',
                    description: 'Using !default or !global multiple times for one variable.',
                    deprecatedIn: {
                      major: 1,
                      minor: 62,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.62.0'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 62,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.62.0'
                    }
                  },
                  'null-alpha': {
                    id: 'null-alpha',
                    status: 'active',
                    description: 'Passing null as alpha in the JS API.',
                    deprecatedIn: {
                      major: 1,
                      minor: 62,
                      patch: 3,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.62.3'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 62,
                      patch: 3,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.62.3'
                    }
                  },
                  'abs-percent': {
                    id: 'abs-percent',
                    status: 'active',
                    description: 'Passing percentages to the Sass abs() function.',
                    deprecatedIn: {
                      major: 1,
                      minor: 65,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.65.0'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 65,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.65.0'
                    }
                  },
                  'fs-importer-cwd': {
                    id: 'fs-importer-cwd',
                    status: 'active',
                    description: 'Using the current working directory as an implicit load path.',
                    deprecatedIn: {
                      major: 1,
                      minor: 73,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.73.0'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 73,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.73.0'
                    }
                  },
                  'css-function-mixin': {
                    id: 'css-function-mixin',
                    status: 'active',
                    description: 'Function and mixin names beginning with --.',
                    deprecatedIn: {
                      major: 1,
                      minor: 76,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.76.0'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 76,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.76.0'
                    }
                  },
                  'mixed-decls': {
                    id: 'mixed-decls',
                    status: 'active',
                    description: 'Declarations after or between nested rules.',
                    deprecatedIn: {
                      major: 1,
                      minor: 77,
                      patch: 7,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.77.7'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 77,
                      patch: 7,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.77.7'
                    }
                  },
                  'feature-exists': {
                    id: 'feature-exists',
                    status: 'active',
                    description: 'meta.feature-exists',
                    deprecatedIn: {
                      major: 1,
                      minor: 78,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.78.0'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 78,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.78.0'
                    }
                  },
                  'color-4-api': {
                    id: 'color-4-api',
                    status: 'active',
                    description: 'Certain uses of built-in sass:color functions.',
                    deprecatedIn: {
                      major: 1,
                      minor: 79,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.79.0'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 79,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.79.0'
                    }
                  },
                  'color-functions': {
                    id: 'color-functions',
                    status: 'active',
                    description: 'Using global color functions instead of sass:color.',
                    deprecatedIn: {
                      major: 1,
                      minor: 79,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.79.0'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 79,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.79.0'
                    }
                  },
                  'legacy-js-api': {
                    id: 'legacy-js-api',
                    status: 'active',
                    description: 'Legacy JS API.',
                    deprecatedIn: {
                      major: 1,
                      minor: 79,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.79.0'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 79,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.79.0'
                    }
                  },
                  'import': {
                    id: 'import',
                    status: 'active',
                    description: '@import rules.',
                    deprecatedIn: {
                      major: 1,
                      minor: 80,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.80.0'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 80,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.80.0'
                    }
                  },
                  'global-builtin': {
                    id: 'global-builtin',
                    status: 'active',
                    description: 'Global built-in functions that are available in sass: modules.',
                    deprecatedIn: {
                      major: 1,
                      minor: 80,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.80.0'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 80,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.80.0'
                    }
                  },
                  'type-function': {
                    id: 'type-function',
                    status: 'active',
                    description: 'Functions named "type".',
                    deprecatedIn: {
                      major: 1,
                      minor: 86,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.86.0'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 86,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.86.0'
                    }
                  },
                  'compile-string-relative-url': {
                    id: 'compile-string-relative-url',
                    status: 'active',
                    description: 'Passing a relative url to compileString().',
                    deprecatedIn: {
                      major: 1,
                      minor: 88,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.88.0'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 88,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.88.0'
                    }
                  },
                  'user-authored': {
                    id: 'user-authored',
                    status: 'user',
                    description: null,
                    deprecatedIn: null,
                    obsoleteIn: null
                  }
                },
                Version: function () {
                  return _call(f, this, Array.prototype.slice.apply(arguments));
                },
                loadParserExports_: function () {
                  return _call(f, Array.prototype.slice.apply(arguments));
                },
                info: 'dart-sass\\t1.90.0\\t(Sass Compiler)\\t[Dart]\\ndart2js\\t3.8.3\\t(Dart Compiler)\\t[Dart]',
                render: function () {
                  return _call(f, Array.prototype.slice.apply(arguments));
                },
                renderSync: function () {
                  return _call(f, Array.prototype.slice.apply(arguments));
                },
                types: {
                  Boolean: function () {
                    return _call(f, this, Array.prototype.slice.apply(arguments));
                  },
                  Color: function () {
                    return _call(f, this, Array.prototype.slice.apply(arguments));
                  },
                  List: function () {
                    return _call(f, this, Array.prototype.slice.apply(arguments));
                  },
                  Map: function () {
                    return _call(f, this, Array.prototype.slice.apply(arguments));
                  },
                  Null: function () {
                    return _call(f, this, Array.prototype.slice.apply(arguments));
                  },
                  Number: function () {
                    return _call(f, this, Array.prototype.slice.apply(arguments));
                  },
                  String: function () {
                    return _call(f, this, Array.prototype.slice.apply(arguments));
                  },
                  Error: function Error() { [native code] }
                },
                NULL: {},
                TRUE: {
                  value: true
                },
                FALSE: {
                  value: false
                },
                cli_pkg_main_0_: function () {
                  return _call(f, Array.prototype.slice.apply(arguments));
                }
              }
            }
          }
        ]
      }
    ]
  },
  optimization: {
    runtimeChunk: 'single',
    splitChunks: {
      cacheGroups: {
        defaultVendor: {
          test: /[\\\\/]node_modules[\\\\/]/,
          priority: -10,
          name: 'vendor',
          chunks: 'all'
        }
      }
    },
    minimizer: [
      /* config.optimization.minimizer('TerserPlugin') */
      new TerserPlugin(
        {
          terserOptions: {
            compress: {
              collapse_vars: false,
              sequences: false,
              keep_infinity: true,
              drop_console: false,
              global_defs: {
                __UGLIFIED__: true
              }
            },
            keep_fnames: true,
            keep_classnames: true,
            format: {
              keep_quoted_props: true
            }
          }
        }
      )
    ]
  },
  plugins: [
    /* config.plugin('FixSourceMapUrlPlugin') */
    new FixSourceMapUrlPlugin(
      {
        outputPath: '__jest__/platforms/android/app/src/main/assets/app'
      }
    ),
    /* config.plugin('ForkTsCheckerWebpackPlugin') */
    new ForkTsCheckerWebpackPlugin(
      {
        async: false,
        typescript: {
          memoryLimit: 4096
        }
      }
    ),
    /* config.plugin('PlatformSuffixPlugin') */
    new PlatformSuffixPlugin(
      {
        extensions: [
          'android'
        ]
      }
    ),
    /* config.plugin('ContextExclusionPlugin|App_Resources') */
    new ContextExclusionPlugin(
      /(.*)App_Resources(.*)/
    ),
    /* config.plugin('ContextExclusionPlugin|Other_Platforms') */
    new ContextExclusionPlugin(
      /.(ios|macos|visionos|apple).(w+)$/
    ),
    /* config.plugin('DefinePlugin') */
    new CompatDefinePlugin(
      {
        __DEV__: true,
        __NS_WEBPACK__: true,
        __NS_ENV_VERBOSE__: false,
        __NS_DEV_HOST_IPS__: '["127.0.0.1","192.168.0.10"]',
        __CSS_PARSER__: '"css-tree"',
        __UI_USE_XML_PARSER__: true,
        __UI_USE_EXTERNAL_RENDERER__: false,
        __COMMONJS__: true,
        __ANDROID__: true,
        __IOS__: false,
        __VISIONOS__: false,
        __APPLE__: false,
        'global.isAndroid': true,
        'global.isIOS': false,
        'global.isVisionOS': false,
        process: 'global.process'
      }
    ),
    /* config.plugin('CopyWebpackPlugin') */
    new CopyPlugin(
      {
        patterns: [
          {
            from: 'assets/**',
            context: '__jest__/src',
            noErrorOnMissing: true,
            globOptions: {
              dot: false,
              ignore: [
                '**/custom_app_resources/**'
              ]
            }
          },
          {
            from: 'fonts/**',
            context: '__jest__/src',
            noErrorOnMissing: true,
            globOptions: {
              dot: false,
              ignore: [
                '**/custom_app_resources/**'
              ]
            }
          },
          {
            from: '**/*.+(jpg|png)',
            context: '__jest__/src',
            noErrorOnMissing: true,
            globOptions: {
              dot: false,
              ignore: [
                '**/custom_app_resources/**'
              ]
            }
          }
        ]
      }
    ),
    /* config.plugin('WatchStatePlugin') */
    new WatchStatePlugin()
  ],
  entry: {
    bundle: [
      '@nativescript/core/globals/index',
      '@nativescript/core/bundle-entry-points',
      '__jest__/src/app.js',
      '@nativescript/core/ui/frame',
      '@nativescript/core/ui/frame/activity'
    ]
  }
}"
`;

exports[`base configuration for ios 1`] = `
"{
  mode: 'development',
  externals: [
    'package.json',
    '~/package.json',
    function () { /* omitted long function */ }
  ],
  externalsPresets: {
    node: false
  },
  devtool: 'inline-source-map',
  target: 'node',
  watchOptions: {
    ignored: [
      '__jest__/platforms/**',
      '__jest__/custom_app_resources/**'
    ]
  },
  ignoreWarnings: [
    /System.import\\(\\) is deprecated/
  ],
  output: {
    path: '__jest__/platforms/ios/jest/app',
    pathinfo: false,
    publicPath: '',
    libraryTarget: 'commonjs',
    globalObject: 'global',
    clean: true
  },
  resolve: {
    fallback: {
      module: '/Users/nstudio/Documents/github/NativeScript/NativeScript/packages/webpack5/src/polyfills/module.ts'
    },
    fullySpecified: false,
    symlinks: true,
    alias: {
      'mdn-data/css/properties.json': '/Users/nstudio/Documents/github/NativeScript/NativeScript/packages/webpack5/src/polyfills/mdn-data-properties.ts',
      'mdn-data/css/syntaxes.json': '/Users/nstudio/Documents/github/NativeScript/NativeScript/packages/webpack5/src/polyfills/mdn-data-syntaxes.ts',
      'mdn-data/css/at-rules.json': '/Users/nstudio/Documents/github/NativeScript/NativeScript/packages/webpack5/src/polyfills/mdn-data-at-rules.ts',
      module: '/Users/nstudio/Documents/github/NativeScript/NativeScript/packages/webpack5/src/polyfills/module.ts',
      '~': '__jest__/src',
      '@': '__jest__/src'
    },
    extensions: [
      '.ios.ts',
      '.apple.ts',
      '.ts',
      '.ios.js',
      '.apple.js',
      '.js',
      '.ios.mjs',
      '.apple.mjs',
      '.mjs',
      '.ios.css',
      '.apple.css',
      '.css',
      '.ios.scss',
      '.apple.scss',
      '.scss',
      '.ios.json',
      '.apple.json',
      '.json'
    ],
    modules: [
      '__jest__/node_modules',
      'node_modules'
    ]
  },
  resolveLoader: {
    modules: [
      '__jest__/node_modules/@nativescript/webpack/dist/loaders',
      '__jest__/node_modules',
      'node_modules'
    ]
  },
  module: {
    rules: [
      /* config.module.rule('esm-extensionless') */
      {
        test: /\\.(mjs|js|ts|tsx)$/,
        resolve: {
          fullySpecified: false
        }
      },
      /* config.module.rule('bundle') */
      {
        enforce: 'post',
        test: '__jest__/src/app.js',
        use: [
          /* config.module.rule('bundle').use('app-css-loader') */
          {
            loader: 'app-css-loader',
            options: {
              platform: 'ios'
            }
          }
        ]
      },
      /* config.module.rule('workers') */
      {
        test: /\\.(mjs|js|ts)$/,
        use: [
          /* config.module.rule('workers').use('nativescript-worker-loader') */
          {
            loader: 'nativescript-worker-loader'
          }
        ]
      },
      /* config.module.rule('ts') */
      {
        test: [
          /\\.ts$/
        ],
        use: [
          /* config.module.rule('ts').use('ts-loader') */
          {
            loader: 'ts-loader',
            options: {
              transpileOnly: true,
              allowTsInNodeModules: true,
              compilerOptions: {
                sourceMap: true,
                declaration: false
              },
              getCustomTransformers: function () { /* omitted long function */ }
            }
          },
          /* config.module.rule('ts').use('native-class-downlevel-loader') */
          {
            loader: 'native-class-downlevel-loader'
          },
          /* config.module.rule('ts').use('native-class-strip-loader') */
          {
            loader: 'native-class-strip-loader'
          }
        ]
      },
      /* config.module.rule('js') */
      {
        test: /\\.js$/,
        exclude: [
          /node_modules/
        ]
      },
      /* config.module.rule('xml') */
      {
        test: /\\.xml$/,
        use: [
          /* config.module.rule('xml').use('xml-namespace-loader') */
          {
            loader: 'xml-namespace-loader'
          }
        ]
      },
      /* config.module.rule('css') */
      {
        test: /\\.css$/,
        use: [
          /* config.module.rule('css').use('apply-css-loader') */
          {
            loader: 'apply-css-loader'
          },
          /* config.module.rule('css').use('css2json-loader') */
          {
            loader: 'css2json-loader'
          },
          /* config.module.rule('css').use('postcss-loader') */
          {
            loader: 'postcss-loader',
            options: {
              postcssOptions: {
                plugins: [
                  [
                    'postcss-import',
                    {
                      resolve: function () { /* omitted long function */ }
                    }
                  ]
                ]
              }
            }
          }
        ]
      },
      /* config.module.rule('scss') */
      {
        test: /\\.scss$/,
        use: [
          /* config.module.rule('scss').use('apply-css-loader') */
          {
            loader: 'apply-css-loader'
          },
          /* config.module.rule('scss').use('css2json-loader') */
          {
            loader: 'css2json-loader'
          },
          /* config.module.rule('scss').use('postcss-loader') */
          {
            loader: 'postcss-loader',
            options: {
              postcssOptions: {
                plugins: [
                  [
                    'postcss-import',
                    {
                      resolve: function () { /* omitted long function */ }
                    }
                  ]
                ]
              }
            }
          },
          /* config.module.rule('scss').use('sass-loader') */
          {
            loader: 'sass-loader',
            options: {
              implementation: {
                load: function () { /* omitted long function */ },
                compile: function () {
                  return _call(f, Array.prototype.slice.apply(arguments));
                },
                compileString: function () {
                  return _call(f, Array.prototype.slice.apply(arguments));
                },
                compileAsync: function () {
                  return _call(f, Array.prototype.slice.apply(arguments));
                },
                compileStringAsync: function () {
                  return _call(f, Array.prototype.slice.apply(arguments));
                },
                initCompiler: function () {
                  return _call(f, Array.prototype.slice.apply(arguments));
                },
                initAsyncCompiler: function () {
                  return _call(f, Array.prototype.slice.apply(arguments));
                },
                Compiler: function () {
                  return _call(f, this, Array.prototype.slice.apply(arguments));
                },
                AsyncCompiler: function () {
                  return _call(f, this, Array.prototype.slice.apply(arguments));
                },
                Value: function Value0() {
                },
                SassBoolean: function () {
                  return _call(f, this, Array.prototype.slice.apply(arguments));
                },
                SassArgumentList: function () {
                  return _call(f, this, Array.prototype.slice.apply(arguments));
                },
                SassCalculation: function () {
                  return _call(f, this, Array.prototype.slice.apply(arguments));
                },
                CalculationOperation: function () {
                  return _call(f, this, Array.prototype.slice.apply(arguments));
                },
                CalculationInterpolation: function () {
                  return _call(f, this, Array.prototype.slice.apply(arguments));
                },
                SassColor: function () {
                  return _call(f, this, Array.prototype.slice.apply(arguments));
                },
                SassFunction: function () {
                  return _call(f, this, Array.prototype.slice.apply(arguments));
                },
                SassMixin: function () {
                  return _call(f, this, Array.prototype.slice.apply(arguments));
                },
                SassList: function () {
                  return _call(f, this, Array.prototype.slice.apply(arguments));
                },
                SassMap: function () {
                  return _call(f, this, Array.prototype.slice.apply(arguments));
                },
                SassNumber: function () {
                  return _call(f, this, Array.prototype.slice.apply(arguments));
                },
                SassString: function () {
                  return _call(f, this, Array.prototype.slice.apply(arguments));
                },
                sassNull: {},
                sassTrue: {
                  value: true
                },
                sassFalse: {
                  value: false
                },
                Exception: function () { /* omitted long function */ },
                Logger: {
                  silent: {
                    warn: function () {
                      return _call(f, Array.prototype.slice.apply(arguments));
                    },
                    debug: function () {
                      return _call(f, Array.prototype.slice.apply(arguments));
                    }
                  }
                },
                NodePackageImporter: function () {
                  return _call(f, this, Array.prototype.slice.apply(arguments));
                },
                deprecations: {
                  'call-string': {
                    id: 'call-string',
                    status: 'active',
                    description: 'Passing a string directly to meta.call().',
                    deprecatedIn: {
                      major: 0,
                      minor: 0,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '0.0.0'
                    },
                    obsoleteIn: {
                      major: 0,
                      minor: 0,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '0.0.0'
                    }
                  },
                  elseif: {
                    id: 'elseif',
                    status: 'active',
                    description: '@elseif.',
                    deprecatedIn: {
                      major: 1,
                      minor: 3,
                      patch: 2,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.3.2'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 3,
                      patch: 2,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.3.2'
                    }
                  },
                  'moz-document': {
                    id: 'moz-document',
                    status: 'active',
                    description: '@-moz-document.',
                    deprecatedIn: {
                      major: 1,
                      minor: 7,
                      patch: 2,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.7.2'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 7,
                      patch: 2,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.7.2'
                    }
                  },
                  'relative-canonical': {
                    id: 'relative-canonical',
                    status: 'active',
                    description: 'Imports using relative canonical URLs.',
                    deprecatedIn: {
                      major: 1,
                      minor: 14,
                      patch: 2,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.14.2'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 14,
                      patch: 2,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.14.2'
                    }
                  },
                  'new-global': {
                    id: 'new-global',
                    status: 'active',
                    description: 'Declaring new variables with !global.',
                    deprecatedIn: {
                      major: 1,
                      minor: 17,
                      patch: 2,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.17.2'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 17,
                      patch: 2,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.17.2'
                    }
                  },
                  'color-module-compat': {
                    id: 'color-module-compat',
                    status: 'active',
                    description: 'Using color module functions in place of plain CSS functions.',
                    deprecatedIn: {
                      major: 1,
                      minor: 23,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.23.0'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 23,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.23.0'
                    }
                  },
                  'slash-div': {
                    id: 'slash-div',
                    status: 'active',
                    description: '/ operator for division.',
                    deprecatedIn: {
                      major: 1,
                      minor: 33,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.33.0'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 33,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.33.0'
                    }
                  },
                  'bogus-combinators': {
                    id: 'bogus-combinators',
                    status: 'active',
                    description: 'Leading, trailing, and repeated combinators.',
                    deprecatedIn: {
                      major: 1,
                      minor: 54,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.54.0'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 54,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.54.0'
                    }
                  },
                  'strict-unary': {
                    id: 'strict-unary',
                    status: 'active',
                    description: 'Ambiguous + and - operators.',
                    deprecatedIn: {
                      major: 1,
                      minor: 55,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.55.0'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 55,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.55.0'
                    }
                  },
                  'function-units': {
                    id: 'function-units',
                    status: 'active',
                    description: 'Passing invalid units to built-in functions.',
                    deprecatedIn: {
                      major: 1,
                      minor: 56,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.56.0'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 56,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.56.0'
                    }
                  },
                  'duplicate-var-flags': {
                    id: 'duplicate-var-flags',
                    status: 'active',
                    description: 'Using !default or !global multiple times for one variable.',
                    deprecatedIn: {
                      major: 1,
                      minor: 62,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.62.0'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 62,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.62.0'
                    }
                  },
                  'null-alpha': {
                    id: 'null-alpha',
                    status: 'active',
                    description: 'Passing null as alpha in the JS API.',
                    deprecatedIn: {
                      major: 1,
                      minor: 62,
                      patch: 3,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.62.3'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 62,
                      patch: 3,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.62.3'
                    }
                  },
                  'abs-percent': {
                    id: 'abs-percent',
                    status: 'active',
                    description: 'Passing percentages to the Sass abs() function.',
                    deprecatedIn: {
                      major: 1,
                      minor: 65,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.65.0'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 65,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.65.0'
                    }
                  },
                  'fs-importer-cwd': {
                    id: 'fs-importer-cwd',
                    status: 'active',
                    description: 'Using the current working directory as an implicit load path.',
                    deprecatedIn: {
                      major: 1,
                      minor: 73,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.73.0'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 73,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.73.0'
                    }
                  },
                  'css-function-mixin': {
                    id: 'css-function-mixin',
                    status: 'active',
                    description: 'Function and mixin names beginning with --.',
                    deprecatedIn: {
                      major: 1,
                      minor: 76,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.76.0'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 76,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.76.0'
                    }
                  },
                  'mixed-decls': {
                    id: 'mixed-decls',
                    status: 'active',
                    description: 'Declarations after or between nested rules.',
                    deprecatedIn: {
                      major: 1,
                      minor: 77,
                      patch: 7,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.77.7'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 77,
                      patch: 7,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.77.7'
                    }
                  },
                  'feature-exists': {
                    id: 'feature-exists',
                    status: 'active',
                    description: 'meta.feature-exists',
                    deprecatedIn: {
                      major: 1,
                      minor: 78,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.78.0'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 78,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.78.0'
                    }
                  },
                  'color-4-api': {
                    id: 'color-4-api',
                    status: 'active',
                    description: 'Certain uses of built-in sass:color functions.',
                    deprecatedIn: {
                      major: 1,
                      minor: 79,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.79.0'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 79,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.79.0'
                    }
                  },
                  'color-functions': {
                    id: 'color-functions',
                    status: 'active',
                    description: 'Using global color functions instead of sass:color.',
                    deprecatedIn: {
                      major: 1,
                      minor: 79,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.79.0'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 79,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.79.0'
                    }
                  },
                  'legacy-js-api': {
                    id: 'legacy-js-api',
                    status: 'active',
                    description: 'Legacy JS API.',
                    deprecatedIn: {
                      major: 1,
                      minor: 79,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.79.0'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 79,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.79.0'
                    }
                  },
                  'import': {
                    id: 'import',
                    status: 'active',
                    description: '@import rules.',
                    deprecatedIn: {
                      major: 1,
                      minor: 80,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.80.0'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 80,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.80.0'
                    }
                  },
                  'global-builtin': {
                    id: 'global-builtin',
                    status: 'active',
                    description: 'Global built-in functions that are available in sass: modules.',
                    deprecatedIn: {
                      major: 1,
                      minor: 80,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.80.0'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 80,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.80.0'
                    }
                  },
                  'type-function': {
                    id: 'type-function',
                    status: 'active',
                    description: 'Functions named "type".',
                    deprecatedIn: {
                      major: 1,
                      minor: 86,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.86.0'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 86,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.86.0'
                    }
                  },
                  'compile-string-relative-url': {
                    id: 'compile-string-relative-url',
                    status: 'active',
                    description: 'Passing a relative url to compileString().',
                    deprecatedIn: {
                      major: 1,
                      minor: 88,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.88.0'
                    },
                    obsoleteIn: {
                      major: 1,
                      minor: 88,
                      patch: 0,
                      preRelease: [],
                      build: [],
                      _version$_text: '1.88.0'
                    }
                  },
                  'user-authored': {
                    id: 'user-authored',
                    status: 'user',
                    description: null,
                    deprecatedIn: null,
                    obsoleteIn: null
                  }
                },
                Version: function () {
                  return _call(f, this, Array.prototype.slice.apply(arguments));
                },
                loadParserExports_: function () {
                  return _call(f, Array.prototype.slice.apply(arguments));
                },
                info: 'dart-sass\\t1.90.0\\t(Sass Compiler)\\t[Dart]\\ndart2js\\t3.8.3\\t(Dart Compiler)\\t[Dart]',
                render: function () {
                  return _call(f, Array.prototype.slice.apply(arguments));
                },
                renderSync: function () {
                  return _call(f, Array.prototype.slice.apply(arguments));
                },
                types: {
                  Boolean: function () {
                    return _call(f, this, Array.prototype.slice.apply(arguments));
                  },
                  Color: function () {
                    return _call(f, this, Array.prototype.slice.apply(arguments));
                  },
                  List: function () {
                    return _call(f, this, Array.prototype.slice.apply(arguments));
                  },
                  Map: function () {
                    return _call(f, this, Array.prototype.slice.apply(arguments));
                  },
                  Null: function () {
                    return _call(f, this, Array.prototype.slice.apply(arguments));
                  },
                  Number: function () {
                    return _call(f, this, Array.prototype.slice.apply(arguments));
                  },
                  String: function () {
                    return _call(f, this, Array.prototype.slice.apply(arguments));
                  },
                  Error: function Error() { [native code] }
                },
                NULL: {},
                TRUE: {
                  value: true
                },
                FALSE: {
                  value: false
                },
                cli_pkg_main_0_: function () {
                  return _call(f, Array.prototype.slice.apply(arguments));
                }
              }
            }
          }
        ]
      }
    ]
  },
  optimization: {
    runtimeChunk: 'single',
    splitChunks: {
      cacheGroups: {
        defaultVendor: {
          test: /[\\\\/]node_modules[\\\\/]/,
          priority: -10,
          name: 'vendor',
          chunks: 'all'
        }
      }
    },
    minimizer: [
      /* config.optimization.minimizer('TerserPlugin') */
      new TerserPlugin(
        {
          terserOptions: {
            compress: {
              collapse_vars: true,
              sequences: true,
              keep_infinity: true,
              drop_console: false,
              global_defs: {
                __UGLIFIED__: true
              }
            },
            keep_fnames: true,
            keep_classnames: true,
            format: {
              keep_quoted_props: true
            }
          }
        }
      )
    ]
  },
  plugins: [
    /* config.plugin('FixSourceMapUrlPlugin') */
    new FixSourceMapUrlPlugin(
      {
        outputPath: '__jest__/platforms/ios/jest/app'
      }
    ),
    /* config.plugin('ForkTsCheckerWebpackPlugin') */
    new ForkTsCheckerWebpackPlugin(
      {
        async: false,
        typescript: {
          memoryLimit: 4096
        }
      }
    ),
    /* config.plugin('PlatformSuffixPlugin') */
    new PlatformSuffixPlugin(
      {
        extensions: [
          'ios',
          'apple'
        ]
      }
    ),
    /* config.plugin('ContextExclusionPlugin|App_Resources') */
    new ContextExclusionPlugin(
      /(.*)App_Resources(.*)/
    ),
    /* config.plugin('ContextExclusionPlugin|Other_Platforms') */
    new ContextExclusionPlugin(
      /.(android|macos|visionos).(w+)$/
    ),
    /* config.plugin('DefinePlugin') */
    new CompatDefinePlugin(
      {
        __DEV__: true,
        __NS_WEBPACK__: true,
        __NS_ENV_VERBOSE__: false,
        __NS_DEV_HOST_IPS__: '["127.0.0.1","192.168.0.10"]',
        __CSS_PARSER__: '"css-tree"',
        __UI_USE_XML_PARSER__: true,
        __UI_USE_EXTERNAL_RENDERER__: false,
        __COMMONJS__: true,
        __ANDROID__: false,
        __IOS__: true,
        __VISIONOS__: false,
        __APPLE__: true,
        'global.isAndroid': false,
        'global.isIOS': true,
        'global.isVisionOS': false,
        process: 'global.process'
      }
    ),
    /* config.plugin('CopyWebpackPlugin') */
    new CopyPlugin(
      {
        patterns: [
          {
            from: 'assets/**',
            context: '__jest__/src',
            noErrorOnMissing: true,
            globOptions: {
              dot: false,
              ignore: [
                '**/custom_app_resources/**'
              ]
            }
          },
          {
            from: 'fonts/**',
            context: '__jest__/src',
            noErrorOnMissing: true,
            globOptions: {
              dot: false,
              ignore: [
                '**/custom_app_resources/**'
              ]
            }
          },
          {
            from: '**/*.+(jpg|png)',
            context: '__jest__/src',
            noErrorOnMissing: true,
            globOptions: {
              dot: false,
              ignore: [
                '**/custom_app_resources/**'
              ]
            }
          }
        ]
      }
    ),
    /* config.plugin('WatchStatePlugin') */
    new WatchStatePlugin()
  ],
  entry: {
    bundle: [
      '@nativescript/core/globals/index',
      '@nativescript/core/bundle-entry-points',
      '__jest__/src/app.js'
    ],
    'tns_modules/inspector_modules': [
      '@nativescript/core/inspector_modules'
    ]
  }
}"
`;

exports[`base configuration support env.watchNodeModules 1`] = `
{
  "managedPaths": [],
}
`;

exports[`base configuration supports env.sourceMap=hidden-source-map 1`] = `"../../../ios-sourceMaps/[file].map[query]"`;
